# spesenhelfer

./: .gitignore  Dockerfile  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml
backend/: auth.py  database.py  main.py  models.py  schemas.py  settings.py
backend/routers/: eigenbeleg.py  export.py  health.py  matches.py  receipts.py  reports.py  transactions.py
backend/services/: eigenbeleg_generator.py  matcher.py  pdf_assembler.py  pdf_parser.py  receipt_extractor.py
frontend/: auth-popup.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/public/: auth-popup.html
frontend/src/: App.tsx  auth-popup.ts  index.css
frontend/src/components/: Layout.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/integrations/api/: api.ts  httpClient.ts  types.ts
frontend/src/lib/: msalConfig.ts
frontend/src/pages/: Abgleich.tsx  Dashboard.tsx  Export.tsx  Login.tsx  Matching.tsx  Upload.tsx
